--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,17 +13,18 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-      - name: Debug Artifact Registry permissions
+      - name: Debug Service Account (safe)
         run: |
-          SA_EMAIL=$(gcloud auth list --filter=status:ACTIVE --format="value(account)")
+          SA_EMAIL=$(jq -r '.client_email' "$GOOGLE_APPLICATION_CREDENTIALS")
           PROJECT_ID=${{ secrets.GCP_PROJECT }}
 
           echo "Service Account: $SA_EMAIL"
 
-          gcloud projects get-iam-policy $PROJECT_ID \
+          gcloud projects get-iam-policy "$PROJECT_ID" \
             --flatten="bindings[].members" \
-            --filter="bindings.members:$SA_EMAIL" \
+            --filter="bindings.members:serviceAccount:$SA_EMAIL" \
             --format="table(bindings.role)"
+
       - name: Docker Build and Push
         uses: docker/build-push-action@v6
         with:
