--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,18 +13,9 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-      - name: Debug Service Account (safe)
+      - name: Configure Docker for Artifact Registry
         run: |
-          SA_EMAIL=$(jq -r '.client_email' "$GOOGLE_APPLICATION_CREDENTIALS")
-          PROJECT_ID=${{ secrets.GCP_PROJECT }}
-
-          echo "Service Account: $SA_EMAIL"
-
-          gcloud projects get-iam-policy "$PROJECT_ID" \
-            --flatten="bindings[].members" \
-            --filter="bindings.members:serviceAccount:$SA_EMAIL" \
-            --format="table(bindings.role)"
-
+          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
       - name: Docker Build and Push
         uses: docker/build-push-action@v6
         with:
