--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
       - staging
+
+env:
+  REGION: us-central1
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,13 +19,13 @@ jobs:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
       - name: Configure Docker for Artifact Registry
         run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+          gcloud auth configure-docker $REGION-docker.pkg.dev --quiet
       - name: Docker Build and Push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/website-amadomaker/image-website:${{ github.sha }}
+          tags: $REGION-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/website-amadomaker/image-website:${{ github.sha }}
 
   deploy:
     needs: build
@@ -31,11 +35,40 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-      - name: Deploy to Cloud Run
-        id: deploy-cloudrun
-        uses: google-github-actions/deploy-cloudrun@v3
+      - name: Terraform Setup
+        uses: hashicorp/setup-terraform@v3
         with:
-          service: website-amadomaker
-          image: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/website-amadomaker/image-website:${{ github.sha }}
-      - name: Use Output URL
-        run: echo "Deployed to ${{ steps.deploy-cloudrun.outputs.url }}"
+          terraform_version: "1.1.7"
+      - name: Terraform Init
+        working-directory: ./infra/terraform
+        run: |
+          terraform init \
+            -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
+            -backend-config="prefix=state/website-amadomaker/${{ github.ref_name }}"
+      - name: Terraform Format
+        working-directory: ./infra/terraform
+        run: |
+          terraform fmt -check
+      - name: Set Environment Variable
+        id: env
+        run: |
+          if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
+            echo "environment=prod" >> $GITHUB_ENV
+          elif [[ "${GITHUB_REF}" == "refs/heads/staging" ]]; then
+            echo "environment=staging" >> $GITHUB_ENV
+          else
+            echo "Unsupported branch. Exiting."
+            exit 1
+          fi
+      - name: Terraform Plan
+        working-directory: ./infra/terraform
+        run: |
+          terraform plan -out=plan.out \
+              -var="project_id=${{ secrets.GCP_PROJECT }}" \
+              -var="environment=${{ env.environment }}" \
+              -var="region=$REGION" \
+              -var="docker_image_url=$REGION-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/website-amadomaker/image-website:${{ github.sha }}"
+      - name: Terraform Apply
+        working-directory: ./infra/terraform
+        run: |
+          terraform apply -auto-approve plan.out
