--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,6 +39,12 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.1.7"
+      - name: Debug Info
+        run: |
+          pwd
+          ls -la
+          cd infra/terraform
+          ls -la
       - name: Terraform Init
         working-directory: ./infra/terraform
         run: |
