--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Website Deploy
+name: Website Build and Deploy
 on:
   push:
     branches:
@@ -34,30 +34,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
+
       - name: GCP Authentication
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
       - name: Terraform Setup
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.1.7"
-      - name: Debug Info
-        run: |
-          pwd
-          ls -la
-          cd infra/terraform
-          ls -la
-      - name: Terraform Init
-        working-directory: ./infra/terraform
-        run: |
-          terraform init \
-            -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
-            -backend-config="prefix=state/website-amadomaker/${{ github.ref_name }}"
-      - name: Terraform Format
-        working-directory: ./infra/terraform
-        run: |
-          terraform fmt -check
+
       - name: Set Environment Variable
         id: env
         run: |
@@ -69,6 +56,19 @@ jobs:
             echo "Unsupported branch. Exiting."
             exit 1
           fi
+
+      - name: Terraform Init
+        working-directory: ./infra/terraform
+        run: |
+          terraform init \
+            -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
+            -backend-config="prefix=state/website-amadomaker/${{ env.environment }}"
+
+      - name: Terraform Format
+        working-directory: ./infra/terraform
+        run: |
+          terraform fmt -check
+
       - name: Terraform Plan
         working-directory: ./infra/terraform
         run: |
@@ -77,6 +77,7 @@ jobs:
               -var="environment=${{ env.environment }}" \
               -var="region=$REGION" \
               -var="docker_image_url=$REGION-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/website-amadomaker/image-website:${{ github.sha }}"
+
       - name: Terraform Apply
         working-directory: infra/terraform
         run: |
