--- a/nginx.conf
+++ b/nginx.conf
@@ -9,23 +9,23 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    # Configurações de segurança
+    # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # Cache para arquivos estáticos
+    # Static file caching
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
 
-    # Configuração principal
+    # Main configuration for serving static files
     location / {
         try_files $uri $uri/ =404;
     }
 
-    # Página de erro 404 personalizada (opcional)
+    # Custom error page
     error_page 404 /404.html;
     location = /404.html {
         internal;
